syntax = "proto3";

package server;

option go_package = "github.com/owenthereal/upterm/server";

message CreateSessionRequest {
    string hostUser = 1;
    repeated bytes hostPublicKeys = 2;
    repeated bytes clientAuthorizedKeys = 3;
    string label = 4;
}

message CreateSessionResponse {
    string sessionID = 1;
    string nodeAddr = 2;
    string label = 3;
}

message AuthRequest {
    string client_version = 1;
    string remote_addr = 2;
    bytes authorized_key = 3;
}
